<?php

use App\Models\User;
use App\Models\Workspace;
use App\Models\WorkspaceRole;
use App\Models\WorkspaceUser;
use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('workspace_user_roles', function (Blueprint $table) {
            $table->id();
            $table->foreignIdFor(WorkspaceUser::class)->constrained()->cascadeOnDelete();
            $table->foreignIdFor(WorkspaceRole::class)->constrained()->cascadeOnDelete();
            $table->timestamps();

            $table->unique([
                'user_id',
                'workspace_role_id',
            ]);
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('workspace_user_roles');
    }
};
